Added 24th's news about doorbell security

--- a/_posts/2020-11-01-News-Nov.md
+++ b/_posts/2020-11-01-News-Nov.md
@@ -12,6 +12,8 @@ date: 2020-11-01
 2. [The 5 Biggest Cloud Computing Trends In 2021](#the-5-biggest-cloud-computing-trends-in-2021)   
 3. [Crypto crime slows in 2020, but 'DeFi' hacks rise - CipherTrace report](#crypto-crime-slows-in-2020-but-defi-hacks-rise-cipher-trace-report)   
 4. [Daimler will shrink with shift to electric, autonomous cars](#daimler-will-shrink-with-shift-to-electric-autonomous-cars)   
+5. [Smart doorbells 'easy target for hackers' study finds](#smart-doorbells-easy-target-for-hackers-study-finds)  
+
 
 
 ## [November 3rd, 2020]
@@ -82,16 +84,21 @@ date: 2020-11-01
 
 
 
-## [November 1st, 2020]
+## [November 24th, 2020]
 
-##  
-- **Who:**  
-- **What:**  
-- **When:**  
+## Smart doorbells 'easy target for hackers' study finds
+- **Who:**  The consumer group 'Which'
+- **What:**  The publisher has revealed that the major security flaws in popular smart doorbells are putting consumers at risk of being targeted by hackers inside their homes.
 - **Why:**  
-- **How:**  
+  - The most common flaws came from weak password policies and a lack of data encryption.
+  - Two of the devices in the test could be manipulated to steal network passwords and then hack other smart devices within the home.
+  - The Victure Smart Video Doorbell, was found to send users' home network names and passwords unencrypted to servers in China.
 - **So?:**  
-- [Link to the article]()
+  - A new legislation to safeguard consumers from unsecure products has been requested tot he government.
+  - Amazon has removed at least seven product listings in response to the findings.
+  - When purchasing a smart doorbell, it is advised to change the default password to something long, and to enable two-factor authentication.
+  - Convenience shouldn't be compromised for security - companies should be putting the security of their customers first.
+- [Link to the article](https://www.bbc.com/news/technology-55044568)
 
 
 ## [November 1st, 2020]
