Added Toc and updated the about information

--- a/_posts/2020-07-15-Papers.md
+++ b/_posts/2020-07-15-Papers.md
@@ -1,5 +1,5 @@
 ---
-title: "About the 'CS Papers' category"
+title: "About 'CS Papers' & Table of Contents"
 tags: [CS Papers]
 categories:
   - CS Papers
@@ -8,4 +8,10 @@ date: 2020-07-16
 
 ## **About the 'CS Papers' category**
 
-In this category, a summary of various intriguing Computer Science paper will be uploaded. It will cover various themes, reflecting the current trends and issues, which allows for an easy access to the latest CS technology. 
+This category curates the summaries of various Computer Science articles. It will cover various topics, from current trends and issues to basic yet important CS knowledge.
+
+
+## Table of Contents
+
+1. [Trends, Problems And Solutions of Recommender System](#https://chaerim-kim.github.io/cs%20papers/Papers-2/)
+2. [Security Issues of Edge Computing](#https://chaerim-kim.github.io/cs%20papers/Papers-3/)
