Removed duplicate title and changed the reference style

--- a/_posts/2020-07-15-Papers-2.md
+++ b/_posts/2020-07-15-Papers-2.md
@@ -6,9 +6,6 @@ categories:
 date: 2020-07-16
 ---
 
-#### S. Jain, A. Grover, P. S. Thakur and S. K. Choudhary, International Conference on Computing, Communication & Automation, Noida, 2015, pp. 955-958
-
-
 ### Table of Contents
 [1. Recommender System at Ground Zero](#recommender-system-at-ground-zero)   
 [2. Breeds of Recommender System](#breeds-of-recommender-system)  
@@ -64,3 +61,4 @@ date: 2020-07-16
 
 ### Resources
  - [Trends, Problems And Solutions of Recommender System](https://ieeexplore.ieee.org/document/7148534)
+ > S. Jain, A. Grover, P. S. Thakur and S. K. Choudhary, International Conference on Computing, Communication & Automation, Noida, 2015, pp. 955-958
