Edited ToC to exclude numbering

--- a/_posts/2020-07-15-Papers-2.md
+++ b/_posts/2020-07-15-Papers-2.md
@@ -6,14 +6,14 @@ categories:
 date: 2020-07-16
 ---
 
-### Table of Contents
-[1. Recommender System at Ground Zero](#recommender-system-at-ground-zero)   
-[2. Breeds of Recommender System](#breeds-of-recommender-system)  
-[3. Challenges and Solutions of Recommender System](#challenges-and-solutions-of-recommender-system)   
-[4. Link to the Paper](https://ieeexplore.ieee.org/document/7148534)
+## Table of Contents
+1. [Recommender System at Ground Zero](#recommender-system-at-ground-zero)   
+2. [Breeds of Recommender System](#breeds-of-recommender-system)  
+3. [Challenges and Solutions of Recommender System](#challenges-and-solutions-of-recommender-system)   
+4. [Link to the Paper](https://ieeexplore.ieee.org/document/7148534)
 
 
-
+## Recommender system
 - Recommender System is an information filtering system that aims at predicting the preference of rating given to an item by any user, thereby helping users make personalised decision.
 - The paper discusses various approaches used in the various recommender systems such as Content based, Collaborative and Hybrid recommender system.   
 - It also proposes main challenges and the solutions to these recommendation techniques.
