Added Toc and about info

--- a/_posts/2020-02-01-SC-0TOC.md
+++ b/_posts/2020-02-01-SC-0TOC.md
@@ -1,32 +1,34 @@
 ---
-title: "Distributed System - Table of Contents"
-tags: [Distributed Systems]
+title: "Secure Computing - Table of Contents"
+tags: [Secure Computing]
 categories:
-  - Distributed Systems
+  - Secure Computing
 date: 2020-02-01
 ---
 
-- In these series of notes, various aspects of distributed systems are covered.
-- The books referenced includes:
-  - Tanenbaum A & van Steen M, Distributed Systems: Principles & Paradigms, 3rd edition, PrenticeHall, 2017  
-  - Colouris G, Dollimore J & Kindberg T, Distributed Systems: Concepts and Design, 5th edition, Addison-Wesley, 2012  
+- In these series of notes, various aspects of Secure Computing are covered.
+- It is rather based on **software security**, than hardware security.
 
+## Syllabus
+ - **Cryptography**: the role of cryptography in security, modern cryptographic algorithms and their use in software development and encryption in computer networks.
+ - **Risk management**: threat modelling and risk assessment.
+ - **Modes of attack**: network protocols, malware and software vulnerabilities.
+ - **Mitigation techniques**: counter measures, authentication techniques (biometrics and two-factor authentication), penetration testing, secure systems design and intrusion detection.
+ - **Ethical issues**: ethics of security research, responsible disclosure and privacy.
 
-1.	[Introduction to Distributed Systems](https://chaerim-kim.github.io/distributed%20systems/DS-1/)
-2.	[Introduction to Distributed Systems II](https://chaerim-kim.github.io/distributed%20systems/DS-2/)
-3.	[Distributed Systems Architectures](https://chaerim-kim.github.io/distributed%20systems/DS-3/)
-4.	[Message Oriented Communication](https://chaerim-kim.github.io/distributed%20systems/DS-4/)
-5.	[Service Oriented Architecture](https://chaerim-kim.github.io/distributed%20systems/DS-5/)
-6.	[Web Services](https://chaerim-kim.github.io/distributed%20systems/DS-6/)
-7.	[Web Services- Java](https://chaerim-kim.github.io/distributed%20systems/DS-7/)
-8.	[Representational State Transfer (REST)](https://chaerim-kim.github.io/distributed%20systems/DS-8/)
-9.	[Programming RESTful Web Services in Java](https://chaerim-kim.github.io/distributed%20systems/DS-9/)
-10. [Naming I – Flat Naming](https://chaerim-kim.github.io/distributed%20systems/DS-11/)
-11.	[Naming II – Structured naming](https://chaerim-kim.github.io/distributed%20systems/DS-12/)
-12.	[Naming III – Attribute based Naming](https://chaerim-kim.github.io/distributed%20systems/DS-13/)
-13.	[Timing and Synchronization](https://chaerim-kim.github.io/distributed%20systems/DS-14/)
-14.	[Fault Tolerance](https://chaerim-kim.github.io/distributed%20systems/DS-15/)
-15.	[Cloud Computing I](https://chaerim-kim.github.io/distributed%20systems/DS-16/)
-16.	[Cloud Computing II](https://chaerim-kim.github.io/distributed%20systems/DS-17/)
-17.	[Big Data, MapReduce and Hadoop](https://chaerim-kim.github.io/distributed%20systems/DS-18/)
-18.	[Trends](https://chaerim-kim.github.io/distributed%20systems/DS-19/)
+## Table of Contents
+  1.	[Introduction](#https://chaerim-kim.github.io/secure%20computing/SC-1/)  
+  2.	[Threat modelling](#https://chaerim-kim.github.io/secure%20computing/SC-2/)
+  3.	[Symmetric Ciphers](#https://chaerim-kim.github.io/secure%20computing/SC-3/)
+  4.	[Message authentication](#https://chaerim-kim.github.io/secure%20computing/SC-4/)
+  5.	[Public key cryptography](#https://chaerim-kim.github.io/secure%20computing/SC-5/)
+  6.	[Randomness](#https://chaerim-kim.github.io/secure%20computing/SC-6/)
+  7.	[User authentication](#https://chaerim-kim.github.io/secure%20computing/SC-7/)
+  8.	[TCP/IP networking threats](#https://chaerim-kim.github.io/secure%20computing/SC-8/)
+  9.	[Network defences](#https://chaerim-kim.github.io/secure%20computing/SC-9/)
+  10.	[Abuse of DNS, ARP & application protocols](#https://chaerim-kim.github.io/secure%20computing/SC-10/)
+  11.	[Command injection & input validation](#https://chaerim-kim.github.io/secure%20computing/SC-11/)
+  12.	[Buffer Overruns](#https://chaerim-kim.github.io/secure%20computing/SC-12/)
+  13.	[Low-level vulnerabilities](#https://chaerim-kim.github.io/secure%20computing/SC-13/)
+  14.	[Finding, reporting and avoiding vulnerabilities](#https://chaerim-kim.github.io/secure%20computing/SC-14/)
+  15.	[Intrusion Detection & incident response](#https://chaerim-kim.github.io/secure%20computing/SC-15/˜˜)
