Update 27th's news about european data law

--- a/_posts/2020-11-01-News-Nov.md
+++ b/_posts/2020-11-01-News-Nov.md
@@ -13,6 +13,7 @@ date: 2020-11-01
 3. [Crypto crime slows in 2020, but 'DeFi' hacks rise - CipherTrace report](#crypto-crime-slows-in-2020-but-defi-hacks-rise-cipher-trace-report)   
 4. [Daimler will shrink with shift to electric, autonomous cars](#daimler-will-shrink-with-shift-to-electric-autonomous-cars)   
 5. [Smart doorbells 'easy target for hackers' study finds](#smart-doorbells-easy-target-for-hackers-study-finds)  
+6. [EU plans to open data to sharing in bid to rival Asia and U.S.](#eu-plans-to-open-data-to-sharing-in-bid-to-rival-asia-and-us)  
 
 
 
@@ -101,16 +102,16 @@ date: 2020-11-01
 - [Link to the article](https://www.bbc.com/news/technology-55044568)
 
 
-## [November 1st, 2020]
+## [November 27th, 2020]
 
-##  
-- **Who:**  
-- **What:**  
-- **When:**  
-- **Why:**  
-- **How:**  
-- **So?:**  
-- [Link to the article]()
+##  EU plans to open data to sharing in bid to rival Asia and U.S.
+- **Who:**  The European Commission
+- **What:**  European Commission is proposing new rules to allow sharing of public and personal data with businesses and research organisations.
+- **Why:**  To avoid EU firms and citizens relying on data from Asian and U.S rivals.
+- **How:**  In order for data to circulate, confidence needs to be established - hence the commission proposed a new model based on the neutrality and transparency of so-called “data intermediaries,” which would organise data sharing or pooling, to increase trust.
+They will also regulate the selling of data to another company or using it to develop their own product based.
+- **So?:**  EU hopes to catch up on the digital innovation, particularly in consumer markets such as social media, online shopping and smartphones
+- [Link to the article](https://www.reuters.com/article/us-eu-tech/eu-plans-to-open-data-to-sharing-in-bid-to-rival-asia-and-u-s-idUSKBN2851MH)
 
 
 ## [November 1st, 2020]
