--- a/_posts/2020-10-12-RS-0TOC.md
+++ b/_posts/2020-10-12-RS-0TOC.md
@@ -1,32 +1,26 @@
 ---
-title: "Distributed System - Table of Contents"
-tags: [Distributed Systems]
+title: "Recommender Systems - Table of Contents"
+tags: [Recommender Systems]
 categories:
-  - Distributed Systems
+  - Recommender Systems
 date: 2020-02-01
 ---
 
-- In these series of notes, various aspects of distributed systems are covered.
-- The books referenced includes:
-  - Tanenbaum A & van Steen M, Distributed Systems: Principles & Paradigms, 3rd edition, PrenticeHall, 2017  
-  - Colouris G, Dollimore J & Kindberg T, Distributed Systems: Concepts and Design, 5th edition, Addison-Wesley, 2012  
+- User Adaptive Systems personalises and tailors the vast amount of information into what we **need, want and what best fits** our current needs.
+- The notes will include sections about the General Schema of the User Adaptive systems, user models and different recommender systems.
 
 
-1.	[Introduction to Distributed Systems](https://chaerim-kim.github.io/distributed%20systems/DS-1/)
-2.	[Introduction to Distributed Systems II](https://chaerim-kim.github.io/distributed%20systems/DS-2/)
-3.	[Distributed Systems Architectures](https://chaerim-kim.github.io/distributed%20systems/DS-3/)
-4.	[Message Oriented Communication](https://chaerim-kim.github.io/distributed%20systems/DS-4/)
-5.	[Service Oriented Architecture](https://chaerim-kim.github.io/distributed%20systems/DS-5/)
-6.	[Web Services](https://chaerim-kim.github.io/distributed%20systems/DS-6/)
-7.	[Web Services- Java](https://chaerim-kim.github.io/distributed%20systems/DS-7/)
-8.	[Representational State Transfer (REST)](https://chaerim-kim.github.io/distributed%20systems/DS-8/)
-9.	[Programming RESTful Web Services in Java](https://chaerim-kim.github.io/distributed%20systems/DS-9/)
-10. [Naming I – Flat Naming](https://chaerim-kim.github.io/distributed%20systems/DS-11/)
-11.	[Naming II – Structured naming](https://chaerim-kim.github.io/distributed%20systems/DS-12/)
-12.	[Naming III – Attribute based Naming](https://chaerim-kim.github.io/distributed%20systems/DS-13/)
-13.	[Timing and Synchronization](https://chaerim-kim.github.io/distributed%20systems/DS-14/)
-14.	[Fault Tolerance](https://chaerim-kim.github.io/distributed%20systems/DS-15/)
-15.	[Cloud Computing I](https://chaerim-kim.github.io/distributed%20systems/DS-16/)
-16.	[Cloud Computing II](https://chaerim-kim.github.io/distributed%20systems/DS-17/)
-17.	[Big Data, MapReduce and Hadoop](https://chaerim-kim.github.io/distributed%20systems/DS-18/)
-18.	[Trends](https://chaerim-kim.github.io/distributed%20systems/DS-19/)
+  1. [Introduction](https://chaerim-kim.github.io/recommender%20systems/RS-1/)
+  2. [General Schema of User Adaptive Systems](https://chaerim-kim.github.io/recommender%20systems/RS-2/)
+  3. [User models and profiles (representation)](https://chaerim-kim.github.io/recommender%20systems/RS-3/)
+  4. [User Models and Profiles (building)](https://chaerim-kim.github.io/recommender%20systems/RS-4/)
+  5. [Example: User engagement modelling](https://chaerim-kim.github.io/recommender%20systems/RS-5/)
+  6. [Stereotypes (User categories)](https://chaerim-kim.github.io/recommender%20systems/RS-6/)
+  7. [Recommender systems (Part 1) – Content-based Recommenders](https://chaerim-kim.github.io/recommender%20systems/RS-7/)
+  8. [Recommender systems (Part 1) – Knowledge-based recommenders](https://chaerim-kim.github.io/recommender%20systems/RS-8/)
+  9. [Recommender systems (Part 2) – Collaborative filtering](https://chaerim-kim.github.io/recommender%20systems/RS-9/)
+  10. [Recommender systems (Part 3): Hybrid Recommenders](https://chaerim-kim.github.io/recommender%20systems/RS-10/)
+  11. [Recommender Systems (Part 4): Evaluation](https://chaerim-kim.github.io/recommender%20systems/RS-11/)
+  12. [Group recommendations](https://chaerim-kim.github.io/recommender%20systems/RS-12)
+  13. [Adaptive content presentation](https://chaerim-kim.github.io/recommender%20systems/RS-13)
+  14. [Evaluation of user adaptive systems](https://chaerim-kim.github.io/recommender%20systems/RS-14)
