--- a/_posts/2020-02-01-ML-0TOC.md
+++ b/_posts/2020-02-01-ML-0TOC.md
@@ -13,6 +13,7 @@ In this series of notes, you will will:
  - Use existing implementations of ML algorithms to explore data sets and build models
 
 
+## Table of Contents
 1. [Introduction](https://chaerim-kim.github.io/machine%20learning/ML-1/)
 2. [Machine Learning Evaluation](https://chaerim-kim.github.io/machine%20learning/ML-2)
 3. [Nearest Neighbour Methods](https://chaerim-kim.github.io/machine%20learning/ML-3)
