Rename category, unify styling and test TOC redirection

--- a/_posts/2020-07-15-News-July.md
+++ b/_posts/2020-07-15-News-July.md
@@ -1,24 +1,24 @@
 ---
-title: "July News"
-tags: [Daily News]
+title: "July Technology News"
+tags: [Daily Tech News]
 categories:
-  - Daily News
+  - Daily Tech News
 date: 2020-07-15
 ---
 
-## **July's Updates**
 
-### Table of Contents
-[1. Huawei is being banned from the UK's 5G network](#huawei-is-being-banned-from-the-uks-5g-network)  
-[2. Trump says he has ended preferential treatment for Hong Kong](#trump-says-he-has-ended-preferential-treatment-for-hong-kong)   
-[3. Major US Twitter accounts hacked in Bitcoin scam](#major-us-twitter-accounts-hacked-in-bitcoin-scam)   
-[4. Coronavirus: Third day of wrangling over huge EU recovery plan](coronavirus-third-day-of-wrangling-over-huge-eu-recovery-plan)    
-[5. Coronavirus: Oxford vaccine triggers immune response](#coronavirus-oxford-vaccine-triggers-immune-response)     
-[6. Adobe, IBM team up on marketing software for banking industry](#adobe-ibm-team-up-on-marketing-software-for-banking-industry)   
-[7. Alibaba Cloud helps Chinese students, foreign schools scale Great Firewall](#alibaba-cloud-helps-chinese-students-foreign-schools-scale-great-firewall)   
-[8. Australian regulator sues Google over expanded personal data use](#australian-regulator-sues-google-over-expanded-personal-data-use)   
-[9. U.S. Republicans worry China might use TikTok to meddle in election](#us-republicans-worry-china-might-use-tiktok-to-meddle-in-election)   
-[10. India found cybersecurity lapses at National Payments Corp in 2019](#india-found-cybersecurity-lapses-at-national-payments-corp-in-2019)   
+## **July's Tech Updates**
+
+1. [Huawei is being banned from the UK's 5G network](#huawei-is-being-banned-from-the-uks-5g-network)  
+2. [Trump says he has ended preferential treatment for Hong Kong](#trump-says-he-has-ended-preferential-treatment-for-hong-kong)   
+3. [Major US Twitter accounts hacked in Bitcoin scam](#major-us-twitter-accounts-hacked-in-bitcoin-scam)   
+4. [Coronavirus: Third day of wrangling over huge EU recovery plan](#coronavirus-third-day-of-wrangling-over-huge-eu-recovery-plan)    
+5. [Coronavirus: Oxford vaccine triggers immune response](#coronavirus-oxford-vaccine-triggers-immune-response)     
+6. [Adobe, IBM team up on marketing software for banking industry](#adobe-ibm-team-up-on-marketing-software-for-banking-industry)   
+7. [Alibaba Cloud helps Chinese students, foreign schools scale Great Firewall](#alibaba-cloud-helps-chinese-students-foreign-schools-scale-great-firewall)   
+8. [Australian regulator sues Google over expanded personal data use](#australian-regulator-sues-google-over-expanded-personal-data-use)   
+9. [U.S. Republicans worry China might use TikTok to meddle in election](#us-republicans-worry-china-might-use-tiktok-to-meddle-in-election)   
+10. [India found cybersecurity lapses at National Payments Corp in 2019](#india-found-cybersecurity-lapses-at-national-payments-corp-in-2019)   
 
 
 ## [July 15th, 2020]
@@ -185,5 +185,3 @@ date: 2020-07-15
    - But the pressure to financial institutions to mount effective defences to protect their customers from malicious cyberattacks is growing.
 
 - [Link to the article](https://www.reuters.com/article/us-india-cybersecurity-payments-exclusiv/exclusive-india-found-cybersecurity-lapses-at-national-payments-corp-in-2019-government-document-idUSKCN24V0HB)
-
-
