--- a/_posts/2020-11-01-News-Nov.md
+++ b/_posts/2020-11-01-News-Nov.md
@@ -1,16 +1,16 @@
 ---
 title: "November Technology News"
-tags: [Daily News]
+tags: [Daily Tech News]
 categories:
-  - Daily News
+  - Daily Tech News
 date: 2020-11-01
 ---
 
-## **November's Technology Updates**
+## **November's Tech Updates**
 
 1. [Walmart drops plans to use robots for tracking inventory](#walmart-drops-plans-to-use-robots-for-tracking-inventory)   
 2. [The 5 Biggest Cloud Computing Trends In 2021](#the-5-biggest-cloud-computing-trends-in-2021)   
-3. [Crypto crime slows in 2020, but 'DeFi' hacks rise - CipherTrace report](#crypto-crime-slows-in-2020-but-defi-hacks-rise-cipher-trace-report)   
+3. [Crypto crime slows in 2020, but 'DeFi' hacks rise - CipherTrace report](#crypto-crime-slows-in-2020-but-defi-hacks-rise-cipher---trace-report)   
 4. [Daimler will shrink with shift to electric, autonomous cars](#daimler-will-shrink-with-shift-to-electric-autonomous-cars)   
 5. [Smart doorbells 'easy target for hackers' study finds](#smart-doorbells-easy-target-for-hackers-study-finds)  
 6. [EU plans to open data to sharing in bid to rival Asia and U.S.](#eu-plans-to-open-data-to-sharing-in-bid-to-rival-asia-and-us)  
