Fix link redirection and indentation

--- a/_posts/2020-11-01-News-Nov.md
+++ b/_posts/2020-11-01-News-Nov.md
@@ -10,7 +10,7 @@ date: 2020-11-01
 
 1. [Walmart drops plans to use robots for tracking inventory](#walmart-drops-plans-to-use-robots-for-tracking-inventory)   
 2. [The 5 Biggest Cloud Computing Trends In 2021](#the-5-biggest-cloud-computing-trends-in-2021)   
-3. [Crypto crime slows in 2020, but 'DeFi' hacks rise - CipherTrace report](#crypto-crime-slows-in-2020-but-defi-hacks-rise-cipher---trace-report)   
+3. [Crypto crime slows in 2020, but DeFi hacks rise - CipherTrace report](#crypto-crime-slows-in-2020-but-defi-hacks-rise---ciphertrace-report)   
 4. [Daimler will shrink with shift to electric, autonomous cars](#daimler-will-shrink-with-shift-to-electric-autonomous-cars)   
 5. [Smart doorbells 'easy target for hackers' study finds](#smart-doorbells-easy-target-for-hackers-study-finds)  
 6. [EU plans to open data to sharing in bid to rival Asia and U.S.](#eu-plans-to-open-data-to-sharing-in-bid-to-rival-asia-and-us)  
@@ -36,6 +36,7 @@ date: 2020-11-01
 ##  The 5 Biggest Cloud Computing Trends In 2021
 - **Author:**  Bernard Marr
 - **What:**
+
 1. Multi-cloud approaches will lead to a breakdown of barriers between providers
   - Currently the big cloud providers take a walled-garden approach to the service they provide. However, the industry is increasingly turning to hybrid or multi-cloud environments, meaning that the bridges between their platforms are to be made for a collaborative approach.
 
@@ -56,7 +57,7 @@ date: 2020-11-01
 
 ## [November 11th, 2020]
 
-##  Crypto crime slows in 2020, but 'DeFi' hacks rise - CipherTrace report
+##  Crypto crime slows in 2020, but DeFi hacks rise - CipherTrace report
 - **Who:**  A report from crypto intelligence company CipherTrace
 - **What:**  
   - Have said that the loss from cryptocurrecny thefts and hacks have declined to $1.8 billion compared with last year, but crimes from the "decentralized finance" sector rose.
