Delete repeated title and add TOC

--- a/_posts/2020-02-01-DS-1.md
+++ b/_posts/2020-02-01-DS-1.md
@@ -1,18 +1,29 @@
 ---
-title: "Introduction"
+title: "Introduction to Distributed Systems"
 tags: [Distributed Systems]
 categories:
   - Distributed Systems
 date: 2020-02-01
 ---
 
-## **1. Introduction to Distributed Systems**
+1. [Definition of a Distributed System](#definition-of-a-distributed-system)
+2. [Examples of Dist. sys](#examples-of-dist-sys)
+3. [Middleware](#middleware)
+4. [Challenges for Distributed Systems](#challenges-for-distributed-systems)
+5. [Goals for Distributed Systems](#goals-for-distributed-systems)
+6. Scaling Techniques  
+  6.1 [Scaling Techniques - 1. Hiding communication latencies](#scaling-techniques---1-hiding-communication-latencies)  
+  6.2 [Scaling techniques – 2. DNS](#scaling-techniques--2-dns)  
+  6.3 [Scaling techniques – 3. Replication- another imp](#scaling-techniques--3-replication--another-imp)
+  - [Summary](#summary)
 
-**Definition of a DS**
 
-|                                                                                                                      |
-| -------------------------------------------------------------------------------------------------------------------- |
-| \[Tannenbaum\] – A collection of autonomous computing elements that appears to its users as a single coherent system |
+
+### Definition of a Distributed System
+
+|                                                                               |
+| ----------------------------------------------------------------------------- |
+| 💡 [Tannenbaum] – A collection of autonomous computing elements that appears to its users as a single coherent system |
 
   - Explanation: <span class="underline">A collection of elements</span>
     that as a user myself can see the connection of the system as a
@@ -28,9 +39,10 @@ date: 2020-02-01
     through network\!
   - **the idea of network is important\!\!**
 
-|                                                                                                                    |
-| ------------------------------------------------------------------------------------------------------------------ |
-| \[Colouris\] – A collection of autonomous computing elements that appears to its users as a single coherent system |
+
+|                                                                               |
+| ----------------------------------------------------------------------------- |
+| 💡 [Colouris] – A collection of autonomous computing elements that appears to its users as a single coherent system |
 
   - Collection of network elements are networked, and communicate via
     message passing
@@ -45,11 +57,11 @@ date: 2020-02-01
         that data is replicated
   - Transparency is KEY\!
 
-|                                                                                                                                                                                    |
-| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **Transparency** : concealment from the user of the separated components in a distributed system so that its seen as a whole rather than as a collection of independent components |
+|                                                                               |
+| ----------------------------------------------------------------------------- |
+| 💡 **Transparency** : concealment from the user of the separated components in a distributed system so that its seen as a whole rather than as a collection of independent components |
 
-**Examples of Dist. sys**
+### Examples of Dist. sys
   - The internet/ intranets – cluster of computers connected
       - Doesn’t fulfil the <span class="underline">transparency</span> –
         as it is easy to guess the IP. So you know exactly where and what
@@ -74,7 +86,7 @@ date: 2020-02-01
 
 
 
-**Middleware**
+### Middleware
   - 4 machines are running at the same time. && Each machine has its own
     OS, and msg passing algorithm.
   - Middleware (distributed system a) is the key layer – sits btwn
@@ -85,44 +97,38 @@ date: 2020-02-01
   - The middleware extends over multiple machines
 
 
-**Challenges for Distributed Systems**
+### Challenges for Distributed Systems
   - Architecture, performance, synchronization, security, transparency,
     protocols, data management, reliability, fault tolerance, failure
     \!\!
       - Would it fail all together?
 
 
-**Goals for Distributed Systems**
-1.  **<span class="underline">Sharing of resources -</span>** data,
+### Goals for Distributed Systems
+1.  **<span class="underline">Sharing of resources </span>** data,
     files, services, networks etc
 
-<!-- end list -->
+  1.  Cloud based shared storage
+      1.  Data could be stored on different remote machines, and
+          synchronization is need to keep it up to date
+  2.  File sharing Peer to Peer networks – concept of
+      <span class="underline">transparency</span>
+      1.  E.g. BitTorrent – spreading of a file through many peer computer
+          nodes. Since every participant is a content provider, no
+          dependency on a single party
+  3.  Shared mail services (office 365) – again the fact that his email
+      box is somewhere on the cloud. Yet he can send and receive email
+      from a local machine → transparency
+  4.  Shared web hosting
+      1.  Content distribution network → NETFLIX\! They will ensure that
+          what we need to access is in the server. And it looks up the
+          closet server (for low latency)
+      2.  interesting is the fact that data is duplicated here and there
+      3.  concept of <span class="underline">outsourcing</span> seems to
+          be common
 
-1.  Cloud based shared storage
-    1.  Data could be stored on different remote machines, and
-        synchronization is need to keep it up to date
-2.  File sharing Peer to Peer networks – concept of
-    <span class="underline">transparency</span>
-    1.  E.g. BitTorrent – spreading of a file through many peer computer
-        nodes. Since every participant is a content provider, no
-        dependency on a single party
-3.  Shared mail services (office 365) – again the fact that his email
-    box is somewhere on the cloud. Yet he can send and receive email
-    from a local machine → transparency
-4.  Shared web hosting
-    1.  Content distribution network → NETFLIX\! They will ensure that
-        what we need to access is in the server. And it looks up the
-        closet server (for low latency)
-    2.  interesting is the fact that data is duplicated here and there
-    3.  concept of <span class="underline">outsourcing</span> seems to
-        be common
-
-<!-- end list -->
 
 2.  **<span class="underline">Transparency</span>**
-
-<!-- end list -->
-
   - We have machine, OS, middleware, kernel → and we need them to talk
     to each other\!
   - So far we know network services as socket programming, TCP
@@ -135,7 +141,7 @@ date: 2020-02-01
 
 |                                                                               |
 | ----------------------------------------------------------------------------- |
-| **Goal**: to hide heterogeneity of the underlying platforms from applications |
+| 💡 **Goal**: to hide heterogeneity of the underlying platforms from applications |
 
   - Q: What do we mean by transparency?
       - **Access** – if I look at computers in the network, some are in
@@ -230,8 +236,7 @@ date: 2020-02-01
 
   - → concept of geographic and admin is v imp\!
 
-**Scaling Techniques -** 1. Hiding communication latencies
-
+### Scaling Techniques - 1. Hiding communication latencies
   - Client machine on LHS and server RHS. Suppose that we input in
     client form, and this form is sent to server and is checked. Then
     server process the form.
@@ -240,8 +245,8 @@ date: 2020-02-01
   - → Diff when it comes to network resources and how its implemented.
     It how we DESIGN the dis sys
 
-**Scaling techniques – 2. DNS**
 
+### Scaling techniques – 2. DNS
   - The name table for internet was a single master file – centralized
     approach so it didn’t scale well. And we have 1 billion machines\!\!
     → gotta think how we gonna structure\!
@@ -264,7 +269,7 @@ date: 2020-02-01
             regularly
 
 
-**Scaling techniques –** 3. Replication- another imp
+### Scaling techniques – 3. Replication- another imp
   - Replication of data bc components of DS is likely to fail. So we
     want higher availability,
   - Pros
@@ -273,9 +278,7 @@ date: 2020-02-01
       - Can hide communication latency problem
           - E.g. Netflix, we stream it from the server near you\! Less
             latency
-
   - Drawbacks
-
       - Multiple copies could be inconsistent. you gotta change and update
         ALL copies
       - To keep the copies consistent, u’ll need ur servers to
@@ -287,8 +290,7 @@ date: 2020-02-01
         scale, you may have low bandwidth, high latency → issue that u
         need to keep in mind
 
-**Summary**
-
+### Summary
   - Defined a distributed system as a collection of independent
     computers giving the appearance of a single coherent system  
   - Introduced challenges as they apply to distributed systems
