Delete repeated title, add TOC, fix styling

--- a/_posts/2020-02-03-DS-2.md
+++ b/_posts/2020-02-03-DS-2.md
@@ -1,14 +1,23 @@
 ---
-title: "Introduction II"
+title: "Introduction to Distributed Systems II"
 tags: [Distributed Systems]
 categories:
   - Distributed Systems
 date: 2020-02-03
 ---
 
-## **2. Introduction to Distributed Systems II**
+- [Centralised vs decentralised systems](#centralised-vs-decentralised-systems)
+- [Types of distributed Systems**](#types-of-distributed-systems)
+  - [1 - High performance distributed computing systems**](#1---high-performance-distributed-computing-systems)
+  - [2 - Distributed information systems](#2---distributed-information-systems)
+  - [3 - Distributed Pervasive Systems](#3---distributed-pervasive-systems)
+- [Ubiquitous Computing Systems](#ubiquitous-computing-systems)
+- [Mobile Computing Systems](#mobile-computing-systems)
+- [Sensor Networks](#sensor-networks)
+- [Summary](#summary)
 
-**Centralised vs decentralised systems**
+
+## Centralised vs decentralised systems
 
 | **Centralised**                          | **Decentralised**                                             |
 | ---------------------------------------- | ------------------------------------------------------------- |
@@ -24,10 +33,10 @@ date: 2020-02-03
 
       - In google, it will fail all the time but for us it still works
 
-**Types of distributed Systems**
+## Types of distributed Systems
 
-**1- High performance distributed computing systems** – Historically, if
-we look at parallel computing, aka running code over a large no of
+### 1 - High performance distributed computing systems
+- Historically, if we look at parallel computing, aka running code over a large no of
 processes. We have 2 models - Shared and distributed memory model. We
 emphasized on two models
 
@@ -105,7 +114,7 @@ Layered grid architecture – TCP/IP protocol stack
     <!-- end list -->
 
 
-**2 - Distributed information systems**
+### 2 - Distributed information systems
 
   - Always need to integrate apps from here and there – apps that are
     usually networked, so the idea of interoperability was always
@@ -134,7 +143,7 @@ Layered grid architecture – TCP/IP protocol stack
 
 <br/>
 
-**3 - Distributed Pervasive Systems**
+### 3 - Distributed Pervasive Systems
   - The node devices are small, mobile, and embedded in a larger system
     → naturally blends into the user’s environment → Its everywhere.
       - E.g. Internet of things – devices that are there to send some
@@ -185,7 +194,7 @@ Layered grid architecture – TCP/IP protocol stack
   - If the data is too big, send it to cloud and analyse it\! It has to
     be quick as it could be related to accidents
 
-**Ubiquitous Computing Systems**
+## Ubiquitous Computing Systems
 
   - If you look at any system, it’s likely that it will ALL support 5
     different characteristics
@@ -231,7 +240,7 @@ Layered grid architecture – TCP/IP protocol stack
     interactions using the methods and techniques from the field of AI.
 
 
-**Mobile Computing Systems**
+## Mobile Computing Systems
   - Fact that we have mobile devices that changes location and that they
     can be added to a network. → Change of local services and
     reachability
@@ -239,7 +248,7 @@ Layered grid architecture – TCP/IP protocol stack
     certain scenario. E.g. no signal. Therefore might not be reachable →
     connectivity is not always guaranteed
 
-**Sensor Networks**
+## Sensor Networks
   - Sensor network consists a <span class="underline">large number of
     small nodes</span>, equipped with sensing devices, they are usually
     <span class="underline">battery powered</span>, and uses wireless
@@ -265,7 +274,7 @@ Layered grid architecture – TCP/IP protocol stack
         aggregation of the data collected. Data might not be there\!
         overwritten
 
-**Summary**
+## Summary
   - We looked at diff types of distributed system
   - Emphasized the importance of
       - Computations
